# pdf-pro

./: AGENTS.md  CLAUDE.md  CLI.md  NOTICE.md  README.md  SKILL.md  pyproject.toml
.github/: FUNDING.yml
agents/: openai.yaml
assets/: design-tokens-starter.json
examples/: visual-spec.json
references/: cli-integration.md  compatibility-checklist.md  pdf-workflows.md  platform-compatibility.md  quality-checklist.md  validation-protocol.md  visual-design-system.md
scripts/: create_visual_pdf.py  pdf_ops.py  validate_package.py  validate_pdf.py
src/pdf_pro/: __init__.py  cli.py  create_visual_pdf.py  pdf_ops.py  validate_pdf.py
tests/: test_cli_smoke.py
